# doctor

./: .gitignore  .gitreview  .testr.conf  .yamllint  :q  AUTHORS  ChangeLog  INFO  INFO.yaml  Makefile  UPSTREAM  cirros.img  groups  project.config  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
design_docs/: README  notification-alarm-evaluator.rst  report-host-fault-to-update-server-state-immediately.rst
designdocs/: notification-alarm-evaluator.rst  update-server-state-immediately.rst
devstack/: README.rst  local.conf.sample  plugin.sh  settings
docs/: conf.py  conf.yaml  index.rst
doctor/: __init__.py  clients.py  config.py  logger.py  main.py  opts.py  service.py  utils.py
doctor_test_refactor/: clients.py  logger.py  opts.py  service.py  test_doctor_verify.py
doctor_tests/: alarm.py  config.py  identity_auth.py  image.py  instance.py  logger.py  main.py  maintenance_hot_tpl.yaml  network.py  os_clients.py  profiler_poc.py  stack.py  user.py
etc/: conf.py  doctor.sample.conf
fuel-plugin/: README.md  deployment_tasks.yaml  environment_config.yaml  metadata.yaml  uninstall.sh
manuals/: mark-host-down_manual.rst
requirements/: 00-terms.rst  01-intro.rst  02-use_cases.rst  03-architecture.rst  04-gaps.rst  05-implementation.rst  06-summary.rst  07-annex.rst  99-references.rst  Reporting Host Faults.rst  (+4 more)
tests/py/: .testr.conf  config.py  image.py  logger.py  main.py  os_clients.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
tests/py/doctor/: config.py  image.py  logger.py  main.py  os_clients.py
(+240 files in other folders)
