[metadata]
name = doctor
summary = OPNFV Fault Management
description-file =
    INFO
author = opnfv
author-email = opnfv-dev@lists.opnfv.org
home-page = https://wiki.opnfv.org/display/doctor
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    doctor

[entry_points]
console_scripts =
    doctor = doctor.main:main
